--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -12,7 +12,7 @@
   <body>
     <main>
       <canvas class="home__canvas"></canvas>
-      <a class="home__link" href="https://github.com/nemutas/ws-report7" target="_blank" rel="noopener noreferrer">Github</a>
+      <a class="home__link" href="https://github.com/nemutas/ws-report7-2" target="_blank" rel="noopener noreferrer">Github</a>
     </main>
   </body>
 </html>
